--- a/styles/resposivo.css
+++ b/styles/resposivo.css
@@ -16,9 +16,7 @@
         flex-direction: row;
 
     }
-    main div{
-        margin-top: 20px;
-    }
+
     #textArea h1{
         font-size: 2.5em;
         font-weight: 600;
@@ -57,5 +55,9 @@
         font-size: 11px;
         font-weight: 500;
     }
+    #formulario #labelFirstName, #labelLastName, #labelEmail, #labelPassword{
+        width: 350px;
+    }
+
 
 }
