--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,6 @@ main p{
     text-align: center;
     font-size: 18px;
     font-weight: 700;
-    margin-top: 30px;
     background: #5E54A4;
     width: 320px;
     height: 88px;
@@ -59,7 +58,7 @@ main p{
     transition: 0.7s;
 }
 form{
-    border-radius: 10px;
+    border-radius: 7px;
     margin: 20px;
     background-color: #fff;
     box-shadow: 0px 7px 0px hsla(249, 10%, 26%, 0.473) ;
@@ -87,11 +86,14 @@ form input{
     padding-left: 15px ;
     border: none;
     font-weight: 600;
+    outline: 0;
+    height: 40px;
 }
 #formulario p{
     color: #BAB7D4;
     font-size: 16px;
     font-weight: 500;
+    margin-top: 30px;
 }
 #termsServices{
     color: #FF7979;
